Criado um h1 no header aula 07

--- a/html/aula05/index.html
+++ b/html/aula05/index.html
@@ -1,41 +1,34 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caracteres Especiais</title>
+    <title>Document</title>
 </head>
 <body>
-
-    <header>
-        <h1>Caracteres Especiais</h1>
-        <br><br>
-    </header>
-
+    <head>
+    <h1> Lista HTML</h1>
+    </head>
     <main>
+    <h2>Tipo de lista:</h2>
+        <!-- UL = Unordered List, ou seja, lista desordenada -->
+    <ul  type = "circle">
+        <!-- List  Item, ou seja, item da lista -->
+       <li>Listas ordenadas OL</li>
+       <li>Listas não-ordenadas UL</li>
+       <li>Listas de definição DL</li>
+    </ul>
 
-        <p>Esther &copy&nbsp;&nbsp;&amp;&nbsp;&nbsp; Morgana&reg;</p>
-        <br><br>
-        <h2>Explicação caracteres Especiais</h2>
-        <!-- Break how -->
-        <br><br>
-        <!-- Use 3 caracteres especiais em uma frase explicando como eles funcionam -->
-         <p>&dollar; serve para utilizar com moeda em dólar&nbsp; &euro; para euro e &pound; para libra</p>
-        <br><br>
-         <!-- Mostre a tag <a> em texto no seu site -->
-         <p>A tag &lt;&nbsp;a&nbsp;&gt;&nbsp;é responvável por conectar links a elementos</p>
-
-    </main>
-
-    <footer>
-        <br><br>
-        <p>Feito por Esther Cardote, todos os direitos reservados&reg;</p>
-    </footer>
+    <h2>Top 3 piores musicas da playlist:</h2>
     
+    <ol>
+        <li>Friday – Rebecca Black (2011)</li>
+        <li>My Humps – The Black Eyed Peas (2005)</li>
+        <li>Sweatshirt – Jacob Sartorius (2016)</li>
+    </ol>
+    </main>
+    <footer>
+        <p>Feito no Intituto da Oportunidade por Salazar 💜 </p>
+    </footer>
 </body>
 </html>
-
-
-
-
-
